少し違和感が合ったので加筆

--- a/mainpart/03.md
+++ b/mainpart/03.md
@@ -22,10 +22,18 @@ P「なんだか今日は高校が騒がしいな」
 Idol「あ、そういえば今日は学園祭の日だったと思います」
 P「なんだか懐かしいなあ。自分が学生だったときも思い出すし、まさに今日みたいに担当のアイドルと訪れたことも思い出すよ」
 Idol「なんだかプロデューサー、以前も思ったんですが意外と引きずるタイプなんですね」
-P「大げさに言えばそのアイドルを受け持った瞬間、その人間の人生すらも負うくらいの覚悟をもってるからな」
+P「確かにそう言われるとそうかもしれないな」
+P「でもまあ、大げさに言えばそのアイドルを受け持った瞬間、その人間の人生すらも負うくらいの覚悟をもってるからな」
 P「実際律子だって、大衆的な高校生活なんてものは人生においてもう歩むことはできなくなっているわけで、失敗の責任なんて取れないことすらもあるんだ」
 Idol「確かに。そう考えたら、良くも悪くも一生の思い出になるのは必然だったりするのかも」
+P「今の所失敗の連続で、何度も何度も悲しい思い出だけが残っているよ」
+Idol「思い出って、その記憶だけじゃなくて今との関係でも大きく意味が変わりますね」
 Idol「プロデューサー目指してこの世界に入ってきたけど、実際にアイドルのことを深く考えたことはなかったし、そういうことが聞けてよかった」
-Idol「――人生、プロデューサー殿に賭けさせてもらいますよ」
-そう笑って彼女は文化祭に俺を誘った。
-クリスマスも忙しくなるけど、少しくらいの余裕をもたせて年末を迎えたいなあ。
+P「そりゃあ、俺はプロデューサ見習いでもなくて、今は少なくとも秋月律子のプロデューサーやってるからな」
+Idol「確かに。そう考えたらもっともっとプロデューサーの考えを聞いてみたかったりするな」
+Idol「それと――」
+少し微笑んで言った。
+Idol「私の人生、賭けさせてもらいますから」
+まさか、彼女がそんな言葉を俺に言うと思っていなかった。
+彼女は笑って文化祭に俺を誘った。とまどいながら、俺は彼女の後を追う。
+彼女は俺を追っているのだろうか。俺は彼女がどんな姿になってほしいと思っているんだろう。
