読点の修正

--- a/mainpart/05.md
+++ b/mainpart/05.md
@@ -33,7 +33,7 @@ Idol「もちろんです。お仕事やってきますね」
 ---
 
 Idol「ああ本当にアイドルって夢を与えられるんだって、すっごく実感した」
-Idol「それほどに私という存在が、私の想像を超えて成長していたということに驚いたし、自分の分析がまだまだなんだなって思い知らされた」
+Idol「それほどに私という存在が私の想像を超えて成長していたということに驚いたし、自分の分析がまだまだなんだなって思い知らされた」
 Idol「そうそう、それとね！」
 事務所に戻り、当日中に始まったミーティングだったが、彼女の言葉が止むことはない。
 Idol「やっぱり私たちの戦略は正しかったのよ。"常用"戦略の件」
@@ -67,15 +67,15 @@ P「ほう？」
 Idol「諦めたりなんてしない。しないけど、一旦保留。私、いつかアイドルと兼業したいの」
 Idol「だって目の前に私が尊敬する、素晴らしいプロデューサーがいるんだもの。こんなチャンスを見逃すなんてありえない」
 P「それはちょっと買いかぶり過ぎなんじゃないか？」
-Idol「いえ、そんなことはありません。私をここまで導いてくれた人以上に尊敬できるプロデューサーなんているわけじゃないじゃない」
-P「そうか。律子の判断は理解できたよ。律子らしいと思う」
+Idol「いえ、そんなことはありません。私をここまで導いてくれた人以上に尊敬できるプロデューサーなんて、いるわけないじゃない」
+P「――ああ、そうか。律子の判断は理解できたよ。律子らしいと思う」
 P「その状況を適切に分析して、必要に応じて自分の考え方を柔軟に変えていけるのはすごいことだ」
 P「トップアイドル目指して、いつかプロデューサーとして活動がしたいと思ったら言ってくれ。いつでも協力するよ」
 Idol「ありがと、プロデューサー殿」
 車は彼女の住む家の近くに着いた。
 Idol「また明日。今日のイベントは私にとって最高の時間だったよ」
-P「ああまた明日。もっと話を聞かせてくれよな」
+P「また明日。もっと話を聞かせてくれよな」
 彼女は志を変えた。けれど諦めたわけでもなくて、今の彼女を確かに理解していた。
 去年の夏頃だったか彼女が言っていた、『アイドルって重い』という言葉をようやく実感したのだろう。
-その重さも含めてアイドルの魅力なんだと俺は思っていた。そしてたしかにそうであると、彼女を見て思った。
+その重さも含めてアイドルの魅力なんだと俺は思っていた。そして、たしかにそうであると彼女を見て思った。
 その重さの中で下した道だからこそ惹きつけられるものがいて、アイドルは輝くのだ。
